--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-dialog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A NativeScript plugin for iOS and Android that allows you to create custom dialog.",
   "main": "index.js",
   "nativescript": {
@@ -12,9 +12,15 @@
   },
   "keywords": [
     "NativeScript",
+	"native",
+	"script",
     "dialog",
     "custom",
-	"alert"
+	"alert",
+	"UIAlertView",
+	"UIAlertController",
+	"ios",
+	"android"
   ],
   "author": "Vladimir Enchev <vladimir.enchev@gmail.com> (https://github.com/enchev)",
   "license": "Apache-2.0",
