--- a/demo/package.json
+++ b/demo/package.json
@@ -3,6 +3,9 @@
 		"id": "org.nativescript.demo",
 		"tns-android": {
 			"version": "1.4.0"
+		},
+		"tns-ios": {
+			"version": "1.4.1"
 		}
 	},
 	"dependencies": {
