--- a/demo/package.json
+++ b/demo/package.json
@@ -2,11 +2,14 @@
 	"nativescript": {
 		"id": "org.nativescript.demo",
 		"tns-android": {
-			"version": "1.7.1"
+			"version": "2.4.1"
+		},
+		"tns-ios": {
+			"version": "2.4.0"
 		}
 	},
 	"dependencies": {
-		"nativescript-dialog": "0.0.6",
-		"tns-core-modules": "1.7.1"
+		"nativescript-dialog": "0.0.8",
+		"tns-core-modules": "2.4.3"
 	}
 }
